03-kubernetes/02-ingress/namespace-devops.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: devops
  labels:
    name: devops
