03-kubernetes/02-ingress/deployment-app-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-k8s-app-dev
  namespace: devops
  labels:
    app: app-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-dev
  template:
    metadata:
      labels:
        app: app-dev
    spec:
      containers:
      - name: app-dev
        image: ababic89/k8s-app-dev:v0.1
        ports:
        - containerPort: 80
          name: http-app-dev
---
apiVersion: v1
kind: Service
metadata:
  name: devops-k8s-app-dev-service
  namespace: devops
spec:
  selector:
    app: app-dev
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http-app-dev
